--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </select>
 
   <div id="intro" class="intro">
-    <img src="images/logo.webp" alt="Logo del servidor">
+    <img src="logo.webp" alt="Logo del servidor">
     Cargando Web
   </div>
 
@@ -158,7 +158,7 @@ export default function Home() {
       <p id="sugerenciasTexto">¡Envíanos tus ideas para mejorar el servidor!</p>
       <div class="formulario-google">
         <a href="https://forms.gle/Jdz6nVkMpK2dwfio6" target="_blank" class="btn-pixel-vertical">
-          <img src="images/bz.jpg" alt="Disc">
+          <img src="bz.jpg" alt="Disc">
           <span>Enviar Sugerencia</span>
         </a>
       </div>
@@ -167,27 +167,27 @@ export default function Home() {
   <h2>👥 Nuestro Staff</h2>
   <div class="staff-cards">
     <div class="card-staff">
-      <img src="images/yalmil.gif" alt="Yalmil">
+      <img src="yalmil.gif" alt="Yalmil">
       <h3>Yalmil</h3>
       <p>Owner & Fundador, se encarga de la programacion</p>
     </div>
     <div class="card-staff">
-      <img src="images/eron.webp" alt="Eron2o23">
+      <img src="eron.webp" alt="Eron2o23">
       <h3>Eron2o23</h3>
       <p>Creador & Fundador del servidor, fue el primer usuario en el servidor</p>
     </div>
     <div class="card-staff">
-      <img src="images/omicron.webp" alt="Omicron">
+      <img src="omicron.webp" alt="Omicron">
       <h3>Omicron</h3>
       <p>Manager general, no se como consiguio ese rango, pero esta bien</p>
     </div>
        <div class="card-staff">
-      <img src="images/ben10.webp" alt="Ben10">
+      <img src="ben10.webp" alt="Ben10">
       <h3>Ben10</h3>
       <p>Moderador, ha demostrado esfuerzo para el servidor a pesar de las complicaciones</p>
     </div>
         <div class="card-staff">
-      <img src="images/XIM.png" alt="XM">
+      <img src="XIM.png" alt="XM">
       <h3>X...</h3>
       <p>Cuenta la leyenda de que esta persona es todo un misterio y que Yalmil la conoce en la vida real, ademas se dice que no tiene discord pero si tuviera Yalmil le regalaria el servidor, y aqui dejo de escribir porque si no Yalmil me silencia</p>
     </div>
@@ -198,18 +198,18 @@ export default function Home() {
     <section id="galeria">
       <h2>🎇 Mejores Momentos</h2>
       <div class="galeria-grid">
-        <img src="images/recuerdo1exe.webp" alt="El mejor shipeo...">
-        <img src="images/recuerdo2fg.webp" alt="Fotito grupal">
-        <img src="images/recuerdo3neubtp.webp" alt="Era un bug suave">
+        <img src="recuerdo1exe.webp" alt="El mejor shipeo...">
+        <img src="recuerdo2fg.webp" alt="Fotito grupal">
+        <img src="recuerdo3neubtp.webp" alt="Era un bug suave">
       </div>
     </section>
     <section id="minijuego">
   <h2>💎 Encuentra el Diamante</h2>
   <p>Haz clic en uno de los cofres. ¡Solo uno tiene el diamante!</p>
   <div class="cofres">
-    <img src="images/cofre.jpg" onclick="verificarDiamante(1)">
-    <img src="images/cofre.jpg" onclick="verificarDiamante(2)">
-    <img src="images/cofre.jpg" onclick="verificarDiamante(3)">
+    <img src="cofre.jpg" onclick="verificarDiamante(1)">
+    <img src="cofre.jpg" onclick="verificarDiamante(2)">
+    <img src="cofre.jpg" onclick="verificarDiamante(3)">
   </div>
   <p id="resultado-juego"></p>
 </section>
@@ -219,15 +219,15 @@ export default function Home() {
       <p id="redesTexto" style="text-align: center;">Conéctate con la comunidad en nuestras plataformas:</p>
       <div class="social-links">
         <a href="https://discord.gg/YmwsAAC6Pu" target="_blank" class="btn-pixel-vertical">
-          <img src="images/discord.webp" alt="Discord">
+          <img src="discord.webp" alt="Discord">
           <span>Discord</span>
         </a>
         <a href="https://instagram.com/sep.comu" target="_blank" class="btn-pixel-vertical">
-          <img src="images/instagram.webp" alt="Instagram">
+          <img src="instagram.webp" alt="Instagram">
           <span>Instagram</span>
         </a>
         <a href="https://chat.whatsapp.com/Gc8nffmwaw6JIFjfhCRiG1" target="_blank" class="btn-pixel-vertical">
-          <img src="images/what.webp" alt="Whatsapp">
+          <img src="what.webp" alt="Whatsapp">
           <span>Whatsapp</span>
         </a>
       </div>
